# zdolnizdalni

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  index.md
_parser/: parse.py  pyproject.toml
_posts/: 2020-03-22-welcome-to-jekyll.markdown
pliki/: Umowa-darowizna.rtf  Umowa-uzyczenia.rtf
