[tool.poetry]
name = "sioparser"
version = "0.1.0"
description = "Parser informacji o szkołach ze strony MEN"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.13.0"
ipdb = "^0.13.2"
requests = "^2.23.0"
pandas = "^1.0.3"
xlrd = "^1.2.0"
black = "^19.10b0"
xlwt = "^1.3.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
